--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.1.0",
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^6.0.1",
-		"mongoose": "^7.0.3"
+		"jsonwebtoken": "^9.0.0",
+		"mongoose": "^7.0.3",
+		"validator": "^13.9.0"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.0",
 		"@types/cors": "^2.8.13",
 		"@types/dotenv": "^8.2.0",
 		"@types/express": "^4.17.17",
 		"@types/helmet": "^4.0.0",
+		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "^18.15.11",
+		"@types/validator": "^13.7.14",
 		"nodemon": "^2.0.22",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.3"
