--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^7.0.3",
+		"swagger-ui-express": "^4.6.2",
 		"validator": "^13.9.0"
 	},
 	"devDependencies": {
@@ -29,6 +30,7 @@
 		"@types/helmet": "^4.0.0",
 		"@types/jsonwebtoken": "^9.0.1",
 		"@types/node": "^18.15.11",
+		"@types/swagger-ui-express": "^4.1.3",
 		"@types/validator": "^13.7.14",
 		"nodemon": "^2.0.22",
 		"ts-node": "^10.9.1",
